--- a/App.xaml
+++ b/App.xaml
@@ -259,5 +259,19 @@
             <Setter Property="Margin" Value="5,-5,-5,0"/>
             <Setter Property="TextDecorations" Value="Underline"/>
         </Style>
+        <Style x:Key="OwnershipBox" TargetType="TextBox">
+            <Setter Property="Width" Value="390"/>
+            <Setter Property="Height" Value="300"/>
+            <Setter Property="Foreground" Value="#2c2c2c"/>
+            <Setter Property="Background" Value="#FFFAF7F2"/>
+            <Setter Property="FontFamily" Value="Segoe Script"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Margin" Value="15"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="BorderBrush" Value="#2c2c2c"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Padding" Value="5"/>
+        </Style>
     </Application.Resources>
 </Application>
