--- a/ChapList.xaml
+++ b/ChapList.xaml
@@ -243,7 +243,7 @@
                 </StackPanel>
             </StackPanel>
             <StackPanel Grid.Row="3">
-            <TextBlock x:Name="ListSkill" Style="{StaticResource SpasStatsBlock}" TextWrapping="Wrap" Height="114" Width="279" HorizontalAlignment="Left"/>
+                <TextBox x:Name="ListSkill" Style="{StaticResource OwnershipBox}" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
             </StackPanel>
         </Grid>
     </ScrollViewer>
